# service-status-hub

./: Cargo.toml  Dockerfile  build.rs  package-lock.json  tsconfig.json
.github/workflows/: release.yml
JavaScript/: HtmlMain.js  HtmlMain.js.map  HtmlStaticElement.js.map  HtmlStatusBar.js  HtmlStatusBar.js.map  HtmlValue.js  HtmlValue.js.map  main.js  main.js.map
TypeScript/: HtmlMain.ts  HtmlStatusBar.ts  contracts.d.ts  main.ts
src/: main.rs  settings.rs
src/app_ctx/: app_context.rs
src/background/: data_collector.rs  mod.rs
src/flows/: get_git_hub_releases.rs  mod.rs
src/http/: mod.rs
src/http/controllers/home_controller/: index_action.rs
src/http/controllers/status_controller/: get_status_action.rs  mod.rs  models.rs
wwwroot/css/: site.css
wwwroot/js/: app.js
